--- a/user-onboarding/src/App.css
+++ b/user-onboarding/src/App.css
@@ -28,6 +28,22 @@
   color: #61dafb;
 }
 
+.errors {
+  color:red;
+  font-size: .75em;
+}
+.users {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.user {
+  text-align:left;
+  border: 1px solid black;
+}
+
 form div {
   display: flex;
   flex-direction: column;
